--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,6 +87,16 @@
           <td> date:'MMMM - dd' </td>
           <td> {{ date | date:'MMMM - dd' }} </td>
         </tr>
+        <tr>
+          <td> {{ name }} </td>
+          <td> password:{{ active }} </td>
+          <br>
+          <button
+              (click)='active = !active'
+              type='button'
+              class="btn btn-outline-primary">Activar/Desactivar</button>
+          <td> {{ name | password:active}} </td>
+        </tr>
     </tbody>
   </table>
 
@@ -98,5 +108,7 @@
   <h3>JSON</h3>
   <pre> {{ hero | json }} </pre>
 
+  <h3>Youtube <small>video</small> </h3>
+  <iframe [src]="video | domSafe:'https://www.youtube.com/embed/'" frameborder="0"></iframe>
 
 </div>
